Structure improvement with separation of main and functions in makefile

--- a/parallel_code/makefile
+++ b/parallel_code/makefile
@@ -1,15 +1,21 @@
-CXX=nvcc
-CC=nvcc
-LD=${CXX}
-CXXFLAGS+=-std=c++11
-LDFLAGS+=-lm
+objects= compute_parallel.o kernels.o
+NVCC=nvcc
+opt= -O2 -g -G -std=c++11
+ARCH= -arch=sm_30
+LIBS=
 EXE=compute_parallel.exe
 
-all: clean compute_parallel
+compute_parallel : $(objects)
+	$(NVCC) $(opt)  -o ${EXE} $(objects) $(LIBS)
 
+kernels.o : kernels.cu
+	$(NVCC) $(opt) $(ARCH) -c kernels.cu
 
-compute_parallel :
-	$(LD) compute_parallel.cu -o ${EXE} ${CXXFLAGS} $(LDFLAGS)
+compute_parallel.o : compute_parallel.cu
+	$(NVCC) $(opt) $(ARCH) -c compute_parallel.cu
 
-clean:
-	rm -f $(EXE) *.o *~
+function_tester : clean_2
+	$(LD) function_tester.cu -o function_tester.exe ${CXXFLAGS} $(LDFLAGS)
+
+clean :
+	rm -f *.exe *.o *~
