--- a/sequential_code/makefile
+++ b/sequential_code/makefile
@@ -5,14 +5,21 @@ LD=${CXX}
 CXXFLAGS+=-Wall -Wextra -std=c++11 $(OPTIM)
 LDFLAGS+=-lm
 EXE=compute.exe
+objects=compute.o functions.o
 
 all: clean compute
 
-compute : clean compute.o
-	$(LD) -o $(EXE) compute.o $(LDFLAGS)
+compute : $(objects)
+	$(LD) -o $(EXE) $(objects) $(LDFLAGS) $(OPTIM)
+
+functions.o : functions.cpp
+	$(LD) -c functions.cpp -std=c++11 $(LDFLAGS) $(OPTIM)
+
+compute.o : compute.cpp
+	$(LD) -c compute.cpp -std=c++11 $(LDFLAGS) $(OPTIM)
 
 function_tester : clean function_tester.o
-		$(LD) -o function_tester.exe function_tester.o $(LDFLAGS)
+		$(LD) -o function_tester.exe function_tester.o $(LDFLAGS) $(OPTIM)
 
 
 clean:
